--- a/src/main/resources/templates/listeBijoux.html
+++ b/src/main/resources/templates/listeBijoux.html
@@ -16,15 +16,25 @@
   <div class="card-body">    
       <table class="table table-striped">
         <tr>
-          <th>ID</th><th>Nom Bijoux</th><th>Prix</th><th>Action</th>
+          <th>ID</th><th>Nom Bijoux</th><th>Prix</th><th>Date de Creation</th><th>Marque</th><th>Action</th>
          </tr>  
            <tr th:each="b:${bijoux.content}">
               <td th:text="${b.idBijoux}"></td>
               <td th:text="${b.nomBijoux}"></td>
-              <td th:text="${b.prix}"></td>   
-              <td><a class="btn btn-danger" onclick="return confirm('Etes-vous sûr ?')"
-                th:href="@{supprimerBijoux(id=${b.idBijoux}, page=${currentPage},size=${size})}">Supprimer</a></td> 
-           </tr>             
+              <td th:text="${b.prix}"></td>
+			  <td th:text="${b. dateCreation}"></td>  
+			  <td   
+			  th:if= "${!#strings.isEmpty(b.marque)}"  th:text="${b.bijoux.nomMar}"></td>   
+			  <td th:if= "${#strings.isEmpty(b.marque)}" th:text="${'Pas de Marque'}"></td>
+			  <td sec:authorize="hasAuthority('ADMIN')"><a class="btn btn-success"
+			  th:href="@{modifierBijoux(id=${b.idBijoux})}">Editer</a></td>				<td sec:authorize="hasAuthority('ADMIN')" ><a class="btn btn-danger"
+				onclick="return confirm('Etes-vous sûr ?')"
+				th:href="@{supprimerBijoux(id=${b.idBijoux},
+				page=${currentPage},size=${size})}">Supprimer</a>
+				</td>
+
+           </tr> 
+		        
       </table>
             <ul class="nav nav-pills">
          <li th:each="page,status:${pages}">
