--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html> 
 <html xmlns:th="http://www.thymeleaf.org" 
-xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"> 
+xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+xmlns:sec=https://www.thymeleaf.org/thymeleaf-extras-springsecurity6
+> 
 <link rel="stylesheet" type="text/css" 
 href="webjars/bootstrap/4.3.1/css/bootstrap.min.css" /> 
 <script src="webjars/jquery/3.5.1/jquery.min.js"></script> 
@@ -18,7 +20,6 @@ src="webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <ul class="navbar-nav"> 
 <li class="nav-item"> 
 <a class="nav-link" th:href="@{ListeBijoux}" >Home</a> 
-                                             Spring Boot (2024) 
  
     </li> 
  
@@ -28,8 +29,9 @@ src="webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         Bijoux 
       </a> 
       <div class="dropdown-menu"> 
-        <a class="dropdown-item"  th:href="@{showCreate}">Ajouter</a> 
-        <a class="dropdown-item"  th:href="@{ListeBijoux}">Lister</a> 
+		<a sec:authorize="hasAnyAuthority('ADMIN', 'AGENT')" class="dropdown-item"
+		th:href="@{showCreate}">Ajouter</a>       
+		 <a class="dropdown-item"  th:href="@{ListeBijoux}">Lister</a> 
       </div> 
     </li> 
     </ul> 
@@ -37,11 +39,11 @@ src="webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <ul class="navbar-nav ml-auto" >  
      <li class="nav-item dropdown"> 
    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown"> 
-      [username] 
+	<span sec:authentication="name"></span>
       </a> 
       <div class="dropdown-menu"> 
-        <a class="dropdown-item" href="#">login</a> 
-        <a class="dropdown-item" href="#">logout</a> 
+        <a 	sec:authorize="!isAuthenticated()" class="dropdown-item" href="@{login}">login</a> 
+        <a 		sec:authorize="isAuthenticated()" class="dropdown-item" href="@{logout}">logout</a> 
           <a class="dropdown-item" href="#">Profile</a> 
       </div> 
     </li> 
